# coffeeheim

./: .gitignore  Dockerfile  Makefile  README.md  api.py  docker-compose.yaml  fileutils.py  fluent.conf  mqtt_sub.py  package-lock.json  package.json  permittedlist.py  pyproject.toml  redis.conf  samconfig.toml  sqlite3utils.py  steamid.py  tail.py  template.yaml  valheim.env  wrangler.toml
.github/workflows/: push.yml
api/: handler.py  mqtt_pub.py  requirements.txt  steamid.py
api/tests/: conftest.py  test_handler.py  test_steamid.py
app/: .env  .gitignore  app.py  index.html  index.js  package-lock.json  package.json  wrangler.toml
app/assets/: manifest.json
app/functions/: helloworld.js  ws.js
app/public/: index.html  manifest.json
app/src/: App.jsx  Form.jsx  Rules.jsx  index.css
app/templates/: base.html  index.html
config/: adminlist.txt  bannedlist.txt  permittedlist.txt
data/htdocs/: status.json
fluent-bit/: fluent-bit.conf
fluentd/: Dockerfile
fluentd/conf/: fluent.conf
lambda-function/: handler.py  mqtt_pub.py  requirements.txt  steamid.py  template.yaml
lambda_function/: configs.py  requirements.txt
sample/config/: adminlist.txt
sample/config/bepinex/plugins/Translations/Chinese/: PlanBuild.Chinese.json
sample/config/bepinex/plugins/Translations/English/: PlanBuild.english.json
sample/config/bepinex/plugins/Translations/German/: PlanBuild.Deutsch.json
sample/config/bepinex/plugins/Translations/Korean/: PlanBuild.korean.json
tests/: sample.json  test_fileutils.py  test_permittedlist.py
tests/api/: test_steamid.py
web/: app.py
web/templates/: base.html  index.html
ws/: index.js  wrangler.toml
(+2 files in other folders)
