[tool.poetry]
name = "coffeeheim"
version = "0.1.0"
description = ""
authors = ["Sérgio Rafael Siqueira <osergiosiqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
steam = "^1.4.4"
flask = "^3.0.3"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[tool.black]
line-length = 79
skip-string-normalization = 1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
