[tool.poetry]
name = "coffeeheim"
version = "0.1.0"
description = "Yet another valheim server"
authors = ["Sérgio Rafael Siqueira <osergiosiqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
steam = "^1.4.4"
flask = "^3.0.3"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"
python-a2s = "^1.3.0"
pydantic = "^2.8.0"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[tool.black]
line-length = 79
skip-string-normalization = 1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
