[tool.poetry]
name = "coffeeheim"
version = "0.1.0"
description = "Yet another valheim server"
authors = ["Sérgio Rafael Siqueira <osergiosiqueira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
steam = "^1.4.4"
aws-lambda-powertools = "^2.40.1"
paho-mqtt = "^2.1.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"


[tool.black]
line-length = 79
skip-string-normalization = 1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
